981 - Fix for Valuation - Performance Table ((No Transactions))

--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -132,7 +132,7 @@
 	color: #000;
 	border: 1px solid #ccc;
 	padding: 8px 12px;
-	font: bold 12px/12px Arial, Helvetica, sans-serif;
+	font: 12px/12px Arial, Helvetica, sans-serif;
 	text-align: left;
 	line-height: 280%;
 	vertical-align: top;
