Portfolio key dev UI Changes

--- a/branches/portfolio/clientv2/css/key-dev.css
+++ b/branches/portfolio/clientv2/css/key-dev.css
@@ -111,3 +111,24 @@ hr{
 	margin-top: 2px;
 	
 }
+
+.deleteTran {
+	padding: 0;
+    margin: 25px 0 0 0;
+}
+
+.deleteTran span {
+    display: inline-block;
+    font-size: 12px;
+    background: #0e236b;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    line-height: 22px;
+    padding: 0 10px;
+    color: #fff !important;
+    cursor: pointer;
+}
+
+.ml5p {
+	margin-left: 5px;
+}
