--- a/clientv2/js/client/components/premium-preview.html
+++ b/clientv2/js/client/components/premium-preview.html
@@ -8,7 +8,7 @@
   
   <div class="grid premium-wrapper">
     <div class="trial-box">
-      <p>Ability to create and manage a watch list</p>
+      <p>Ability to create and manage a StockList</p>
       <!--<p>Access to additional companies and currencies</p>-->
       <p>Access to estimates and advanced charting</p>
       <p>Real time market data <i>(only available with a paid Plus account)</i></p>
