--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -417,7 +417,6 @@ height: 17px;
 	display: inline-block;
 	padding-left: 0;
 	margin: 20px 0;
-	border-radius: 4px
 }
 
 .pagination>li {
@@ -426,7 +425,6 @@ height: 17px;
 
 .pagination>li>a, .pagination>li>span {
 	position: relative;
-	float: left;
 	padding: 6px 12px;
 	margin-left: -1px;
 	line-height: 1.42857143;
@@ -458,6 +456,7 @@ height: 17px;
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
 	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
 	{
+	display: inline-block;
 	z-index: 3;
 	color: #fff;
 	cursor: default;
@@ -468,6 +467,7 @@ height: 17px;
 .pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover,
 	.pagination>.disabled>span, .pagination>.disabled>span:focus,
 	.pagination>.disabled>span:hover {
+	display: none;
 	color: #777;
 	cursor: not-allowed;
 	background-color: #fff;
