--- a/clientv2/js/client/components/premium-preview.html
+++ b/clientv2/js/client/components/premium-preview.html
@@ -24,4 +24,6 @@
 		<div class="content" data-bind="html:content"></div>
 	</div>
   </div>  
+  <div data-bind="template: {afterRender: PAGE.resizeIframeSimple()}">
+  </div>
 </div>  
