Fix for ticket #976: Estimates and Technical charting page content is not fully visible for non-logged in users

--- a/branches/patch1.5/clientv2/js/client/components/premium-preview.html
+++ b/branches/patch1.5/clientv2/js/client/components/premium-preview.html
@@ -24,4 +24,6 @@
 		<div class="content" data-bind="html:content"></div>
 	</div>
   </div>  
+  <div data-bind="template: {afterRender: PAGE.resizeIframeSimple()}">
+  </div>
 </div>  
