--- a/clientv2/css/valuation.css
+++ b/clientv2/css/valuation.css
@@ -440,13 +440,14 @@ height: 17px;
 
 .pagination>li>a, .pagination>li>span {
 	position: relative;
-	padding: 6px 12px;
+	padding: 3px 6px 0px;
 	margin-left: -1px;
 	line-height: 1.42857143;
 	color: #0e236b;
 	text-decoration: none;
 	background-color: #fff;
-	border: 1px solid #ddd
+	border: 1px solid #a6a6a6;
+	height: 19px;
 }
 
 .pagination>li:first-child>a, .pagination>li:first-child>span {
