827 key benefits bullet points added

--- a/branches/portfolio/clientv2/js/client/components/premium-preview.html
+++ b/branches/portfolio/clientv2/js/client/components/premium-preview.html
@@ -8,10 +8,13 @@
   
   <div class="grid premium-wrapper">
     <div class="trial-box">
-      <p>Ability to create and manage a StockList</p>
+    <b>Key benefits:</b>
+      <ul>
+      <li><p>Ability to create and manage a StockList</p></li>
       <!--<p>Access to additional companies and currencies</p>-->
-      <p>Access to estimates and advanced charting</p>
-      <p>Real time market data <i>(only available with a paid Plus account)</i></p>
+      <li><p>Access to estimates and advanced charting</p></li>
+      <li><p>Real time market data <i>(only available with a paid Plus account)</i></p></li>
+      </ul>
       <div data-bind="visible:userStatus == 'EXPIRED'">
         <a class="button" href="purchase-account.html" target="_top">PURCHASE</a>
       </div>
