--- a/branches/portfolio/clientv2/css/key-dev.css
+++ b/branches/portfolio/clientv2/css/key-dev.css
@@ -56,6 +56,7 @@ h2 {
 	color: #fff !important;
 	cursor: pointer;
 	margin: 10px 0 30px 5px;
+	text-decoration: none !important;
 }
 
 h3, h3 span {
