--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -10,6 +10,11 @@
 	text-decoration: none;
 }
 
+.valuation-performance a:hover {
+	text-decoration: none;
+	color:#eee;
+}
+
 .valuation-performance ul {
 	padding: 8px 0;
 	margin: 0;
