--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -12,7 +12,7 @@
 
 .valuation-performance a:hover {
 	text-decoration: none;
-	color:#eee;
+	color:#eee !important;
 }
 
 .valuation-performance ul {
