--- a/clientv2/css/alerts.css
+++ b/clientv2/css/alerts.css
@@ -141,4 +141,5 @@
 	margin-right: 20px;
 	font: normal 15px/15px Arial, Helvetica, sans-serif;
 	text-decoration: none !important;
+	border-radius: 4px;
 }
