--- a/clientv2/css/valuation.css
+++ b/clientv2/css/valuation.css
@@ -535,6 +535,6 @@ height: 17px;
 	border-bottom-right-radius: 3px
 }
 
-
+.valuation-save { width: 938px; background: #f2f0db; border: 1px solid #b3c5cf; line-height: 28px; padding: 0 10px; color: #333; font-size: 11.5px; font-style: italic; margin-top: 10px; margin-left: 20px;}
 
 
