--- a/clientv2/css/valuation.css
+++ b/clientv2/css/valuation.css
@@ -414,6 +414,7 @@
 
 .multiTransCompany span{ 
     color :#0e236b;
+    cursor: pointer;
 }
 
 .valuation-results table tbody tr td input[type=checkbox] {
