--- a/clientv2/js/client/templates/stocklist-header.tmpl.html
+++ b/clientv2/js/client/templates/stocklist-header.tmpl.html
@@ -12,7 +12,7 @@
 			<div data-bind="validationOptions: { insertMessages: false}">
 				<div>
 					<!-- ko {if: finalWL().length} -->
-						<select	data-bind="options: finalWL, value: selectedValue, optionsValue: 'id', optionsText: 'name', event: { change: $root.watchListChange.bind($root) }"></select>
+						<select	id="stockListSelect" data-bind="options: finalWL, value: selectedValue, optionsValue: 'id', optionsText: 'name', event: { change: $root.watchListChange.bind($root) }"></select>
 						<a data-bind="click: showChange">EDIT</a> | <a data-bind="click:$root.confirmDelete">DELETE</a>
 						&nbsp;
 					<!-- /ko -->
