--- a/clientv2/js/client/components/premium-preview.html
+++ b/clientv2/js/client/components/premium-preview.html
@@ -12,7 +12,7 @@
       <ul>
 			<li><p>Receive advanced consensusestimates</p></li>
 			<li><p>Perform technical analysis and charting</p></li>
-			<li><p>Customize your watchlist</p></li>
+			<li><p>Customise your watchlist</p></li>
 			<li><p>Receive email alerts</i></p></li>
 			<li><p>Research Asian stocks</i></p></li>
 			<li><p>Get real-time price movements <i>(only available with a paid account)</i></p></li>
