--- a/clientv2/css/estimates.css
+++ b/clientv2/css/estimates.css
@@ -23,7 +23,7 @@
 #estimates-content .summary .progress-estimate .right { background: none;}
 #estimates-content {display:none;}
 #estimates-content table tbody tr td {font-weight:normal;}
-#estimates-content-alternative {display:none; margin-top:20px; padding:15px; border:1px solid #cacdd3;}
+#estimates-content-alternative {display:none; margin-top:20px; padding:15px;}
 #premium .premium-wrapper .trial-box { margin: 0 15px 0 0 !important; }
 #premium .premium-wrapper .view-price .price { right: 65px !important; }
 .data-point-container {
