--- a/branches/browsertesting/clientv2/css/technical-charting.css
+++ b/branches/browsertesting/clientv2/css/technical-charting.css
@@ -265,10 +265,7 @@ div.wrapper {
 .technical-charting-alternative {
   display: none; 
 }
-  .technical-charting-alternative .premium-preview {
-    padding: 10px;
-    /*padding-bottom: 100px;*/
-    border: 1px solid #cacdd3; }
+  .technical-charting-alternative .premium-preview {padding: 10px; }
 #premium .premium-wrapper .trial-box { margin: 0 15px 0 0 !important; }
 #premium .premium-wrapper .view-price .price { right: 65px !important; }
 .indicators-description {
