--- a/trunk/clientv2/js/client/components/premium-preview.html
+++ b/trunk/clientv2/js/client/components/premium-preview.html
@@ -10,11 +10,14 @@
     <div class="trial-box">
     <b>Key benefits:</b>
       <ul>
-      <li><p>Ability to create and manage a StockList</p></li>
-      <!--<p>Access to additional companies and currencies</p>-->
-      <li><p>Access to estimates and advanced charting</p></li>
-      <li><p>Real time market data <i>(only available with a paid Plus account)</i></p></li>
-      </ul>
+			<li><p>Receive advanced consensus estimates</p></li>
+			<li><p>Perform technical analysis and charting</p></li>
+			<li><p>Customise your watchlist</p></li>
+			<li><p>Receive email alerts</i></p></li>
+			<li><p>Research Asian stocks</i></p></li>
+			<li><p>Get real-time price movements <i>(only available with a paid account)</i></p></li>
+			<li><p>Portfolio Simulation</p></li>
+		</ul>
       <div data-bind="visible:userStatus == 'EXPIRED'">
         <a class="button" href="purchase-account.html" target="_top">PURCHASE</a>
       </div>
